_sass/_forms.scss
@import 'variables.scss';

// ==========================================================================
// SE Custom styles for forms
// ==========================================================================

input[type=text],
input[type=number],
input[type=password],
input[type=email] {
    margin-top: 7px;
    font-size: 1em;
    line-height:1em;
    height: 42px;
    border: 1px solid $se-grey;
    border-radius: 0;
}

input[type="radio"],
input[type="checkbox"] {
    display: inline-block;
    width: 1px;
    font-size: 2.5em;
    margin: 0 0 0 10px;
}

.input-group input[type="number"].grey {
    margin-top: 0;
}

div.relative input.fancy-checkbox,
div.relative input.fancy-radio {
    position: absolute;
}

label {
    margin-bottom: 7px;
    font-family: din-mediumregular, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
    @media all and (max-width: $screen-xxs-max) {
        font-size: 1em;
    }
}

label.fancy-checkbox,
label.fancy-radio {
    white-space: normal;
    @media all and (max-width: $screen-xxs-max) {
        margin-top: 0;
    }
}

// This doesn't work when we have multiple on one line..
// So - added rule //
// May need responsive update //
label.inline {
    margin-right: 0;
    &:not(:last-of-type) {
        margin-right: 30px;
    }
}

select {
    min-width: 110px;
    height: 42px;
}


.dropdown-icon{
    position: relative;
    top: -32px;
    right: -210px;
}

.form-group {
    padding: 0 20px 0 0;

    &.dropdown{
        padding:8px!important;
        margin: 0!important;
    }


    @media screen and (max-width: $screen-xs-min) {
        padding: 0;
    }


    &:first-of-type {
        margin-top: 28px;
    }
}

.form-group:first-of-type {
    margin-top: 28px;
}

.form-group-error {
    border: $error-red 1px solid;
    padding-left: 15px;
    label {
        color: $error-red;
    }
}

.form-control {
    display: block;
    padding: 6px 12px;
    width: 100%;
    height: inherit;
    font-size: 0.875em;
    line-height: normal;
    color: $se-body-grey;
    background-color: $se-white;
    background-image: none;
    border: 1px solid $se-light-mid-grey;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}



.error-message {
    color: $error-red;
    padding-top: 5px;
    text-align: left;
}

.error-summary {
    border: 5px solid $error-red;
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 15px 15px 10px;
    h2, a {
        color: $error-red;
        margin-top: 0;
    }
    ul {
        margin: 0;
        li {
            list-style: none;
        }
    }
}

.current-errors {
    li {
        list-style: none;
    }
}

textarea {
    margin-bottom: 0;
    @include border-radius(0);
}

.input-wrapper label {
    display: inline-block;
    font-weight: normal;
    margin-right: 30px;
    font-size: 1.063em;
    line-height: 1.375em;
}

.input-small {
    width: 100%;
    @media all and (min-width: 480px) {
        width: 41.6666%;
    }
    @media all and (min-width: 768px) {
        width: 40%;
    }
    @media all and (min-width: 992px) {
        Width: 37.5%;
    }
}

.input-medium {
    width: 100%;
    @media all and (min-width: 480px) {
        width: 50%;
    }
}

.input-large {
    width: 100%;
}

.char-count {
    font-size: 0.875em !important;
    color: $se-mid-grey;
}

.change-link {
    text-align: right !important;
}

input + label.fancy-checkbox::before {
    top: -4px;
    @media all and (max-width: 568px) {
        left: 2px;
        top: 4px;
    }
}

@media all and (max-width: 610px) {
    label.fancy-checkbox,
    label.fancy-radio {
        position: relative;
        padding-left: 50px;
        margin-top: 21px;
        margin-left: 0;
    }
}

